# stem-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: hotpot_sample.json
scripts/: run_eval.py  run_growth.py  sample_hotpot.py  summarize_results.py
src/stem_agent/: __init__.py  config.py
src/stem_agent/agent/: loop.py  model.py
src/stem_agent/agent/prompts/: baseline.txt  distill.txt  scout.txt  selfcheck.txt
src/stem_agent/eval/: dataset.py  metrics.py  runner.py
src/stem_agent/specialization/: artifact.py  grow.py  rollback.py
src/stem_agent/tools/: _http.py  fetch.py  search.py
tests/: test_artifact_schema.py  test_dataset.py  test_grow.py  test_loop.py  test_metrics.py  test_rollback.py  test_runner.py  test_tools.py
writeup/: report.tex
